--- a/audioplayer/src/main/res/values/strings.xml
+++ b/audioplayer/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="audio_player_header">Audio Player</string>
     <string name="export_section_title">Export</string>
     <string name="play_from_beginning">Play from Beginning</string>
+    <string name="all_audio_files_completed">All audio files completed!</string>
 </resources>
