feature: unify sherpa-onnx screen design with sherpa-ncnn

--- a/audioplayer/src/main/res/values/strings.xml
+++ b/audioplayer/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="export_section_title">Export</string>
     <string name="play_from_beginning">Play from Beginning</string>
     <string name="all_audio_files_completed">All audio files completed!</string>
+    <string name="audio_transcription_title">Audio transcription</string>
 </resources>
